Handle XShape window which shape change

https://bugs.freedesktop.org/show_bug.cgi?id=20839

Tested-by: Yann Droneaud <yann@droneaud.fr>
Signed-off-by: Andreas <finkandreas@web.de>
Reviewed-by: Jeremy Huddleston <jeremyhu@apple.com>
Signed-off-by: Jeremy Huddleston <jeremyhu@apple.com>